[workspace]
members = [
  "api-gateway-worker",
  "ingest-worker",
  "crates/cloudflare",
  "crates/core",
  "crates/shared",
]

[workspace.dependencies]
anyhow = "1.0.101"
axum = { version = "0.8", default-features = false, features = ["json", "macros"] }
derive-new = "0.7.0"
garde = { version = "0.22.1", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.149"
tower-service = "0.3.3"
uuid = { version = "1.21.0", features = ["v7"] }
worker = { version = "0.7", features = ['http', "d1"] }
worker-macros = { version = "0.7", features = ['http'] }

[workspace.dependencies.shared]
path = "./crates/shared"
